scrollbar fix

--- a/app/webroot/css/components/global.scss
+++ b/app/webroot/css/components/global.scss
@@ -16,7 +16,7 @@ html{
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 }
 
@@ -32,7 +32,7 @@ body{
 	font-size: 14px;
 	line-height: px(22px);
 
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 	@include box-sizing();
 
