--- a/app/webroot/css/components/header.scss
+++ b/app/webroot/css/components/header.scss
@@ -605,9 +605,11 @@
 
 		.logo{
 			height: 75px;
-			width: 75px;
+			width: 180px;
 			margin-top: 8px;
 			margin-bottom: 8px;
+			//background-position: -334px -738px;
+			background-position: -240px -885px;
 		}
 		.established, .tagline{
 			margin-top: 45px;
@@ -619,9 +621,7 @@
 				margin-top: 0px;
 			}
 		}
-		.well{
-			width: 100%;
-		}
+
 
 		@media (max-width: 767px){
 			.tagline{
@@ -629,6 +629,9 @@
 			}
 			.tagline.visible-phone{
 				display: block;
+			}
+			.well{
+				width: 100%;
 			}
 		}
 	}
